# rust-practice

./: .gitignore
course-notes/rust-solana-begin/: a1_helloworld  a1_helloworld.rs  a2_data_ownership.rs  a3_error_handling.rs  a4_zero-cost_abstractions.rs  a5_tooling.rs  a7_referential_types.rs  b1_variables.rs  b2_control_flow.rs  b3_pattern_matching.rs
initial-project/: Cargo.toml
initial-project/course-notes/rust-course/: README.md  a1_first_program.rs  a2_variables.rs  a3_types.rs  a4_ownership.rs  e1_async_await.rs  e2_future.rs  e3_executor.rs
initial-project/course-notes/rust-solana-begin/: a1_helloworld.rs  a2_data_ownership.rs  a7_referential_types.rs  b1_variables.rs  b3_pattern_matching.rs  b4_function.rs  b5_closure.rs  b6_generics.rs
initial-project/src/: main.rs
