# Cargo.toml 是 cargo 特有的项目数据描述文件。它存储了项目的所有元配置信息，
# 如果 Rust 开发者希望 Rust 项目能够按照期望的方式进行构建、测试和运行，那么，必须按照合理的方式构建 Cargo.toml


[package]
name = "initial-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
