# Cargo.toml 是 cargo 特有的项目数据描述文件。它存储了项目的所有元配置信息，
# 如果 Rust 开发者希望 Rust 项目能够按照期望的方式进行构建、测试和运行，那么，必须按照合理的方式构建 Cargo.toml


[package]
name = "initial-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.2"
syn = "2.0.60"
libc = "0.2.154"
quote = "1.0.36"
proc-macro2 = "1.0.81"
bitflags = "2.5.0"
rand = "0.8.5"
rand_core = "0.6.4"
cfg-if = "1.0.0"
serde = "1.0.200"
hashbrown = "0.14.5"
base64 = "0.22.1"
regex-automata = "0.4.6"
regex-syntax = "0.8.3"
crossterm = "0.27.0"
log = "0.4.21"
serde_json = "1.0.116"
time = "0.3.36"
aho-corasick = "1.1.3"
url = "2.5.0"